<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/loginViewCenter"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:layout_above="@+id/loginViewCenter"
            android:layout_centerHorizontal="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_margin="5dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textSize="24sp"
                    android:layout_gravity="center"
                    android:gravity="end"
                    android:text="@string/login_usrNameTHint"
                    android:textColor="@color/colorBlack"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/LoginUsrName"
                    android:textSize="24sp"
                    android:maxLength="20"
                    android:lines="1"
                    android:inputType="text"
                    android:hint="@string/login_usrNameHint"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/colorGrey"
                    android:layout_margin="5dp"
                    android:layout_weight="5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_margin="5dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textSize="24sp"
                    android:layout_gravity="center"
                    android:gravity="end"
                    android:text="@string/login_usrPassTHint"
                    android:textColor="@color/colorBlack"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/LoginUsrPass"
                    android:textSize="24sp"
                    android:maxLength="20"
                    android:lines="1"
                    android:inputType="textPassword"
                    android:hint="@string/login_usrPassHint"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/colorGrey"
                    android:layout_margin="5dp"
                    android:layout_weight="5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <Button
                android:id="@+id/LoginButton"
                android:textSize="24sp"
                android:text="@string/login_usrButton"
                android:textColor="@color/colorBlack"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>